AksAndDocker4NetDevs/K8S/webapi-on-docker-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name:  devisland-asp-ondocker-container-service
  namespace: dev-island
spec: 
  type: NodePort 
  selector: 
    app:  devisland-asp-ondocker-container-app
  ports: 
  - name: http 
    port: 8080 
    targetPort: 80
