AksAndDocker4NetDevs/K8S/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devisland-ingress
  namespace: dev-island
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /samples
        backend:
          serviceName: devisland-asp-ondocker-container-service
          servicePort: 8080
